syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AntiAddictNotify {
	string msg = 11;
	string level = 3;
	int32 msg_type = 1;
}