syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message SceneInitFinishRsp {
	int32 retcode = 2;
	uint32 enter_scene_token = 3;
}